--- a/.github/workflows/OCV-Android-SDK.yaml
+++ b/.github/workflows/OCV-Android-SDK.yaml
@@ -8,6 +8,9 @@ on:
       - '.github/workflows/OCV-Android-SDK.yaml'
   workflow_call:
 
+  schedule:
+  - cron: "0 0 * * *"
+
 env:
   PR_AUTHOR: ${{ github.event.pull_request.user.login }}
   PR_AUTHOR_FORK: ${{ github.event.pull_request.head.repo.full_name }}
@@ -24,7 +27,7 @@ jobs:
       run:
         shell: bash
     container:
-      image: quay.io/opencv-ci/androidsdk
+      image: quay.io/opencv-ci/androidsdk:${{ github.base_ref }}
       volumes:
         - /home/opencv-cn/git_cache:/home/ci/git_cache
         - /home/opencv-cn/ci_cache/opencv:/home/ci/.ccache
@@ -52,6 +55,14 @@ jobs:
         git pull -v "https://github.com/${{ env.PR_AUTHOR_FORK }}" "${{ env.SOURCE_BRANCH_NAME }}"
 
     - name: Build OpenCV for Android SDK
+      if: github.base_ref == '3.4'
+      run: |
+        mkdir -p /home/ci/build
+        cd /home/ci/build
+        python3 "${{ env.OPENCV_DOCKER_WORKDIR }}/platforms/android/build_sdk.py" --build_doc --config "${{ env.OPENCV_DOCKER_WORKDIR }}/platforms/android/ndk-17.config.py" --sdk_path "$ANDROID_HOME" --ndk_path "$ANDROID_NDK_HOME" /home/ci/build
+
+    - name: Build OpenCV for Android SDK
+      if: github.base_ref != '3.4'
       run: |
         mkdir -p /home/ci/build
         cd /home/ci/build
@@ -76,7 +87,7 @@ jobs:
       run: cd /home/ci/build && zip -r -9 -y OpenCV4Android.zip OpenCV-android-sdk
     - name: Release Package
       uses: actions/upload-artifact@v3
-      if: github.event_name == 'release'
+      if: ${{ github.event_name == 'schedule' || env.RUNNER_DEBUG == 1 }}
       with:
         name: OpenCV4AndroidSDK
         path: /home/ci/build/OpenCV4Android.zip
